Implementação das exceções dos serviços